# mojito

./: .gitignore  AGENTS.md  idea.md  pom.xml
.github/workflows/: maven-test.yml
chromeextension/: NEXT_STEPS.md  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
chromeextension/fixtures/: ict.html
chromeextension/public/: popup.html
chromeextension/scripts/: fixture-server.mjs  start-fixture-detached.mjs
chromeextension/src/: background.ts  content.ts  popup.ts
cli/: pom.xml
common/: pom.xml
dev-docs/: README.md  tracker.md
dev-docs/demos/: README.md
dev-docs/design/: 001-new-frontend-shell.md  (+31 more)
docker/: Dockerfile-bk21  docker-compose-api-worker.yml  docker-compose.yml  readme.md
mavenplugin/: pom.xml
mf2/: README.md  check.sh  go_cache_env.sh  platform-adapter-parity.md  static_check.sh
mf2/python/: .gitignore  README.md  pyproject.toml  run.sh
mf2/python/examples/: babel_demo.py  demo_functions.py  sample_catalog_functions.py  translate_demo.py
mf2/python/mf2_runtime/: __init__.py  benchmark.py  conformance.py  formatter.py  functions.py  locale.py  model.py  plural.py  profiler.py
mf2/python/src/mojito_mf2/: __init__.py  _cldr_plural_rules.py  _locale_key.py  _plural.py  _portable_functions.py  babel.py  date_time_core.py  errors.py  formatter.py  functions.py  model.py  number_core.py  parser.py  relative_time_core.py
mf2/python/tests/: package_boundary_types.py  test_babel_integration.py  test_inflection_release_gate.py  test_public_api.py  test_relative_time_core.py
mf2/python/tools/: benchmark.py  conformance.py  profiler.py
mf2/rust/mojito-mf2/: Cargo.toml  README.md
mf2/rust/mojito-mf2/examples/: icu4x_demo.rs  inline_translate_demo.rs  translate_demo.rs
mf2/rust/mojito-mf2/examples/sample_catalog_functions/: mod.rs
mf2/rust/mojito-mf2/src/: cldr.rs  cldr_plural_rules.rs  date_time_core.rs  formatter.rs  lib.rs  locale_key.rs  main.rs  model.rs  number_core.rs  parser.rs  relative_time_core.rs  unicode_tests.rs
mf2/rust/mojito-mf2/src/formatter/: icu4x_functions.rs  portable_functions.rs
mf2/rust/mojito-mf2/tests/: conformance.rs  icu4x.rs
restclient/: pom.xml
test-common/: pom.xml
webapp/: package-lock.json  package.json  pom.xml  use_local_npm.sh
(+2265 files in other folders)
