[package]
name = "mojito-mf2"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MessageFormat 2 parser and formatter for Mojito."
readme = "README.md"
repository = "https://github.com/box/mojito"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
