[package]
name = "mojito-mf2"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "MessageFormat 2 parser and formatter for Mojito."
readme = "README.md"
repository = "https://github.com/box/mojito"

[features]
icu4x = [
    "dep:icu_calendar",
    "dep:icu_datetime",
    "dep:icu_decimal",
    "dep:icu_locale_core",
]

[dependencies]
icu_calendar = { version = "2.2.1", optional = true, default-features = false }
icu_datetime = { version = "2.2.0", optional = true, default-features = false, features = ["compiled_data"] }
icu_decimal = { version = "2.2.0", optional = true, default-features = false, features = ["compiled_data"] }
icu_locale_core = { version = "2.2.0", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
